added deepIsEmpty